--- a/inndex.html
+++ b/inndex.html
@@ -12,7 +12,7 @@
     background-position:center; 
     background-repeat: no-repeat; 
       font-family: Arial, sans-serif; 
-      
+      display: flex;
       display: flex;
       justify-content: center; 
       align-items: center; 
