--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 <body id="body">
   <h1>HOW ARE YOU ?</h1>
   <div style="display: flex;gap: 100px;">
-  <a href="./inndex.html">FINE</a>
-  <a href="./inndex.html">Finee</a>  
+  <a href="./main/inndex.html">FINE</a>
+  <a href="./main/inndex.html">Finee</a>  
 </div>
 </body>
 </html>
