--- a/main/inndex.html
+++ b/main/inndex.html
@@ -52,7 +52,7 @@
 <body id="body">
   <h1>DO YOU LIKE ME ?</h1>
   <div style="display: flex;gap: 100px;">
-  <a href="./main/innndex.html">YES</a>
+  <a href="./innndex.html">YES</a>
   <a id="NO"href="#">NO</a>
 </div>
   <script>
