--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     background-repeat: no-repeat;
     background-size: cover;
     font-family: Arial, sans-serif; 
-      background-color: #f7f7f7; 
-      display:flex;
-      justify-content: center; 
-      align-items: center; 
-      height: 100vh; 
-      margin: 0;
-      flex-direction: column;
+    background-color: #f7f7f7; 
+    display:flex;
+    justify-content: center; 
+    align-items: center; 
+    height: 100vh; 
+    margin: 0;
+    flex-direction: column;
     }
  
     h1 {
@@ -28,17 +28,18 @@
       text-align: center; 
       text-transform: uppercase; 
       letter-spacing: 2px; 
+      font-family:cursive;
     }
 
     a {
       font-size: 24px; 
-      text-decoration: none; 
+      text-decoration:none; 
       color: #201e1c; 
       margin: 10px 0; 
       padding: 10px 20px; 
       border-radius: 5px; 
       border: 5px solid #8f1f00 ;
-      transition: background-color 0.3s ease, color 0.3s ease; 
+      transition: background-color 0.3s ease-in, color 0.3s ease; 
     }
 
 
@@ -51,9 +52,9 @@
 </head>
 <body id="body">
   <h1>HOW ARE YOU ?</h1>
-  <div style="display: flex;gap: 100px;">
-  <a href="./main/inndex.html">FINE</a>
-  <a href="./main/inndex.html">Finee</a>  
+  <div style="display:flex;gap: 100px;">
+  <a href="./main/inndex.html">FINE 🥱</a>
+  <a href="./main/inndex.html">Finee 🥰</a>  
 </div>
 </body>
 </html>
