--- a/main/innndex.html
+++ b/main/innndex.html
@@ -10,8 +10,8 @@
 </head>
 <body id="body">
     <h1 style="margin-bottom: 500px;">WILL YOU BE MY VALENTINE ?</h1>
-  <button style="left:750px;" id="button">NO</button>
-    <button style="left:350px"id="second">YES</button>
+  <button style="left:750px;" id="button">NO 😒</button>
+    <button style="left:350px"id="second">YES 🙈</button>
     
   <script src="../main/script.js" >
   </script>
